Compiler Bouw/compiler/test/basic/stephen/fail/types_parameters.cvc
// Should produce a type checking error because funcall has bad arguments.

#include "civic.h"

int kaas(int a) {
    return 0;
}

export int main() {
    int a = 0;
    kaas(5.0 * 6.0);
    return 0;
}
